:sparkles: add Plausible snippet

--- a/src/app.html
+++ b/src/app.html
@@ -11,4 +11,5 @@
 	<body>
 		<div id="svelte">%svelte.body%</div>
 	</body>
+	<script defer data-domain="timeline-chart.dev" src="https://plausible.io/js/plausible.js"></script>
 </html>
