--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/global.css">
-		<script defer data-domain="timeline-chart.dev" src="https://plausible.io/js/plausible.js"></script>
+		<!--<script defer data-domain="timeline-chart.dev" src="https://plausible.io/js/plausible.js"></script>-->
 		%svelte.head%
 	</head>
 	<body>
