--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="%lang%">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/global.css">
-		<!--<script defer data-domain="timeline-chart.dev" src="https://plausible.io/js/plausible.js"></script>-->
+
 		%sveltekit.head%
 	</head>
 	<body>
