add tailwindcss, update html2canvas-pro to fix tailwind upgrade. Rework landing page

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class='bg-sky-50 dark:bg-gray-700 text-gray-800 dark:text-blue-50' >
 		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
