--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="%lang%">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/global.css">
+		<link rel="stylesheet" href="/global.css" />
 
 		%sveltekit.head%
 	</head>
-	<body class='bg-sky-50 dark:bg-gray-700 text-gray-800 dark:text-blue-50' >
+	<body class="bg-sky-50 dark:bg-gray-700 text-gray-800 dark:text-blue-50">
 		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
